build: compile and run with java 8 (#348)
fix: compile and run with java 8 to keep the runner compatible

- removed usage of java > 8 API usage
- the intellij api is compiled with 55 (jdk 11) class format so we can't build and test if with java 8